--- a/package.json
+++ b/package.json
@@ -1,5 +1,18 @@
 {
+  "name": "nodeserver",
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start":"nodemon index.js"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
   "dependencies": {
-    "build": "^0.1.4"
+    "nodemon": "^3.0.1",
+    "socket.io": "^4.7.2"
   }
 }
+
